--- a/com.max-beizer.zerm.sdPlugin/ui/zoom-mute-toggle.html
+++ b/com.max-beizer.zerm.sdPlugin/ui/zoom-mute-toggle.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8" />
+  <title>Zoom Mute Toggle</title>
+  <style>
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      color: white;
+      background-color: #2D2D2D;
+      margin: 0;
+      padding: 16px;
+      font-size: 14px;
+    }
 
-<head lang="en">
-    <title>Zoom Mute Toggle Settings</title>
-    <meta charset="utf-8" />
-    <script src="https://sdpi-components.dev/releases/v3/sdpi-components.js"></script>
+    h1 {
+      font-size: 16px;
+      margin-top: 0;
+      margin-bottom: 16px;
+    }
+
+    p {
+      margin-bottom: 16px;
+    }
+
+    .description {
+      background-color: #3A3A3A;
+      border-radius: 4px;
+      padding: 12px;
+    }
+
+    .note {
+      font-style: italic;
+      font-size: 12px;
+      margin-top: 16px;
+    }
+  </style>
 </head>
-
 <body>
-    <!--
-        This is a basic settings panel for the Zoom mute toggle action.
-        Currently, it has no settings, but could be extended in the future.
-    -->
-    <div class="sdpi-heading">Zoom Mute Toggle</div>
-    <div class="sdpi-item">
-        <p>Press this button to toggle the mute status in Zoom meetings.</p>
-        <p>Requires Zoom to be running and in an active meeting.</p>
-    </div>
-</body>
+  <h1>Zoom Mute Toggle</h1>
 
+  <div class="description">
+    <p>
+      This action toggles the audio mute status in Zoom meetings.
+    </p>
+    <p>
+      It works by sending the <strong>Shift+Command+A</strong> keyboard shortcut to Zoom, even when Zoom is not
+      the focused application.
+    </p>
+    <p class="note">
+      Note: Make sure Zoom has the default keyboard shortcut for muting (Shift+Command+A).
+    </p>
+  </div>
+</body>
 </html>
